--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,14 +32,18 @@ jobs:
       - uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
         with:
           path: ~/.npm
-          key: ${{ runner.os }}-npm-v2-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-npm-v3-cypress14-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
+            ${{ runner.os }}-npm-v3-cypress14-
+            ${{ runner.os }}-npm-v3-
             ${{ runner.os }}-npm-v2-
       - uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
         with:
           path: node_modules
-          key: ${{ runner.os }}-modules-v2-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-modules-v3-cypress14-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
+            ${{ runner.os }}-modules-v3-cypress14-
+            ${{ runner.os }}-modules-v3-
             ${{ runner.os }}-modules-v2-
       - uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
         with:
