chore(ci): separate elm deps into own PRs

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -24,6 +24,10 @@
     {
       "allowedVersions": "!/nightly\\.\\d+$/",
       "matchPackageNames": ["/^@?parcel/"]
+    },
+    {
+      "matchFileNames": ["elm.json"],
+      "groupName": "elm"
     }
   ]
 }
