chore: merge in main

--- a/package.json
+++ b/package.json
@@ -7,36 +7,39 @@
     "node": ">=18.12.0"
   },
   "dependencies": {
-    "@hpcc-js/wasm-graphviz": "^1.3.0",
+    "@hpcc-js/wasm-graphviz": "1.10.0",
     "clipboard": "2.0.11",
     "d3": "^7.8.5"
   },
   "devDependencies": {
     "@double-great/stylelint-a11y": "3.0.4",
     "@fullhuman/postcss-purgecss": "7.0.2",
-    "@parcel/transformer-elm": "2.15.1",
-    "@parcel/transformer-sass": "2.15.1",
+    "@parcel/transformer-elm": "2.15.4",
+    "@parcel/transformer-sass": "2.15.4",
     "axe-core": "4.10.3",
     "cypress": "5.6.0",
     "cypress-axe": "0.14.0",
     "elm": "0.19.1-6",
-    "elm-format": "0.8.7",
-    "elm-test": "0.19.1-revision15",
+    "elm-format": "0.8.8",
+    "elm-test": "0.19.1-revision16",
     "make-dir-cli": "4.0.0",
     "ncp": "2.0.0",
-    "parcel": "2.15.1",
-    "postcss": "8.5.3",
-    "prettier": "3.5.3",
+    "parcel": "2.15.4",
+    "postcss": "8.5.6",
+    "prettier": "3.6.2",
     "rimraf": "6.0.1",
     "start-server-and-test": "2.0.12",
-    "stylelint": "16.19.1",
+    "stylelint": "16.23.0",
     "stylelint-color-format": "1.1.0",
-    "stylelint-config-recommended-scss": "14.1.0",
+    "stylelint-config-recommended-scss": "15.0.1",
     "stylelint-declaration-block-no-ignored-properties": "2.8.0",
     "stylelint-declaration-strict-value": "1.10.11",
     "stylelint-high-performance-animation": "1.11.0",
-    "stylelint-order": "6.0.4",
-    "stylelint-scss": "6.12.0"
+    "stylelint-order": "7.0.0",
+    "stylelint-scss": "6.12.1"
+  },
+  "overrides": {
+    "form-data": "4.0.4"
   },
   "scripts": {
     "predev": "npm run clean",
@@ -57,7 +60,7 @@
     "cypress": "cypress run",
     "cypress:open": "cypress open",
     "clean": "rimraf ./.parcel-cache ./.cache ./dist",
-    "lint:prettier": "prettier --check '**/*.{js,json,ts,yml,scss,html}'",
+    "lint:prettier": "prettier --check '**/*.{js,json,ts,scss,html}'",
     "lint:prettier-fix": "npm run lint:prettier -- --write",
     "lint:css": "stylelint --cache --cache-location 'node_modules/' 'src/scss/**/*.scss'",
     "lint:css-fix": "npm run lint:css -- --fix",
