--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,10 +1,33 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["local>go-vela/renovate-config"],
+  "customManagers": [
+    {
+      "customType": "regex",
+      "managerFilePatterns": ["/(^|/|\\.)elm\\.json$/"],
+      "matchStrings": ["\"elm-version\"\\s*:\\s*\"(?<currentValue>.*)\""],
+      "depNameTemplate": "elm/compiler",
+      "datasourceTemplate": "github-tags",
+      "versioningTemplate": "semver"
+    },
+    {
+      "customType": "regex",
+      "managerFilePatterns": ["/(^|/|\\.)elm\\.json$/"],
+      "matchStrings": [
+        "\"(?<depName>.*/.*?)\"\\s*:\\s*\"(?<currentValue>.*)\""
+      ],
+      "datasourceTemplate": "github-tags",
+      "versioningTemplate": "semver"
+    }
+  ],
   "packageRules": [
     {
       "allowedVersions": "!/nightly\\.\\d+$/",
       "matchPackageNames": ["/^@?parcel/"]
+    },
+    {
+      "matchFileNames": ["elm.json"],
+      "groupName": "elm"
     }
   ]
 }
