refactor: use playwright

--- a/.gitignore
+++ b/.gitignore
@@ -198,6 +198,11 @@ typings/
 # vuepress build output
 .vuepress/dist
 
+# Playwright output
+playwright-results/
+playwright-report/
+test-results/
+
 # Serverless directories
 .serverless/
 
