--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "devDependencies": {
     "@double-great/stylelint-a11y": "3.0.4",
     "@fullhuman/postcss-purgecss": "7.0.2",
+    "@axe-core/playwright": "4.11.1",
     "@playwright/test": "1.58.2",
+    "@types/node": "25.3.0",
     "@parcel/transformer-elm": "2.15.4",
     "@parcel/transformer-sass": "2.15.4",
     "axe-core": "4.10.3",
