--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@parcel/transformer-sass": "2.15.4",
     "@playwright/test": "1.58.2",
     "@types/node": "25.3.0",
+    "axe-core": "4.11.1",
     "elm": "0.19.1-6",
     "elm-format": "0.8.8",
     "elm-test": "0.19.1-revision16",
