--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
   # https://go-vela.github.io/docs/administration/server/
   server:
     container_name: server
-    image: server:local
+    image: target/vela-server:latest
     networks:
       - vela
     environment:
@@ -95,7 +95,7 @@ services:
   # https://go-vela.github.io/docs/administration/worker/
   worker:
     container_name: worker
-    image: worker:local
+    image: target/vela-worker:latest
     networks:
       - vela
     environment:
