feat(artifacts): native object storage for build artifacts (#910)
Co-authored-by: TimHuynh <tim.huynh@target.com>

--- a/.gitignore
+++ b/.gitignore
@@ -184,6 +184,7 @@ typings/
 
 # dotenv environment variables file
 .env
+.env_*
 .env.test
 
 # parcel-bundler cache (https://parceljs.org/)
@@ -278,6 +279,7 @@ dist
 # cypress
 cypress/videos
 cypress/screenshots
+test-results/
 
 # elm add on
 .elm
