--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "stylelint-scss": "6.14.0"
   },
   "overrides": {
-    "form-data": "4.0.5"
+    "form-data": "4.0.5",
+    "cross-spawn": "7.0.6"
   },
   "scripts": {
     "predev": "npm run clean",
