fix(deps): elm tweaks
silencing major dep upgrades. often they are not resolvable/incompatible
with other constraints that renovate is unaware of. apparently there may
be a way to make it smarter if you had a self-hosted renovate runner.
also, major upgrades likely require code changes anyway, so we'd have to
modify anyway.

closes https://github.com/go-vela/ui/pull/890

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -26,6 +26,12 @@
       "matchPackageNames": ["/^@?parcel/"]
     },
     {
+      "matchFileNames": ["elm.json"],
+      "matchUpdateTypes": ["major"],
+      "description": "Major upgrades of dependencies that are compatible likely require code changes, so we disable them to avoid noise.",
+      "enabled": false
+    },
+    {
       "matchPackageNames": ["NoRedInk/elm-json-decode-pipeline"],
       "description": "This package was tagged out of order at one point, 1.0.2 is older than 1.0.1",
       "allowedVersions": "!/^1\\.0\\.2$/"
